force-app/main/default/objects/Dynamic_Id_Setting__c/Dynamic_Id_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Dynamic Id Setting</label>
</CustomObject>