force-app/main/default/objects/Dynamic_Id_Setting__c/fields/Account_Queue_User__c.field-meta.xml
<CustomField>
    <fullName>Account_Queue_User__c</fullName>
    <label>Account Queue User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>