force-app/main/default/objects/Dynamic_Id_Setting__c/fields/Billing_Onboarding_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Onboarding_Record_Type__c</fullName>
    <label>Billing Onboarding Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>