force-app/main/default/objects/Dynamic_Id_Setting__c/fields/Government_Licensee_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Government_Licensee_Record_Type__c</fullName>
    <label>Government Licensee Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>