force-app/main/default/objects/Dynamic_Id_Setting__c/fields/Government_Payer_Opportunity_RT__c.field-meta.xml
<CustomField>
    <fullName>Government_Payer_Opportunity_RT__c</fullName>
    <label>Government Payer Opportunity RT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>