force-app/main/default/objects/Dynamic_Id_Setting__c/fields/SaaS_Single_Site_Onboarding_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Single_Site_Onboarding_Record_Type__c</fullName>
    <label>SaaS Single Site Onboarding Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>